--- a/server/.gitignore
+++ b/server/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 public/app.js
 public/vendor.js
 sessions/
+images/
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
