--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.2"
+    "swiper": "^8.4.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
