--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "dotenv": "^16.0.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.11",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,11 +53,14 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
