--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,12 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading": "^2.0.3",
     "react-fast-marquee": "^1.3.5",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.2",
     "uuid": "^8.3.2"
